--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
     <section id="hero">
         <div class="hero-content glass-card">
             <div class="profile-pic">
-                <img src="https://media.licdn.com/dms/image/v2/D5603AQHxKxL0I8dXDQ/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1729357891623" alt="Ishaan Gupta">
+                <img src="https://media.licdn.com/dms/image/v2/D5603AQHu0L47Tkb8TA/profile-displayphoto-scale_200_200/B56Zm4RMlKG0AY-/0/1759733142072?e=2147483647&amp;v=beta&amp;t=MyCaU0ceMDvCbCxg8KhTcHsHrksYJlX_cTBwHm8kxoI" alt="Ishaan Gupta">
             </div>
             <h1 class="hero-title">Hi, I'm Ishaan Gupta</h1>
             <p class="hero-subtitle">Class 9 Student | Don Bosco School</p>
